--- a/documentation/MeetingMinutes/MoM-2023-03-29.md
+++ b/documentation/MeetingMinutes/MoM-2023-03-29.md
@@ -4,68 +4,45 @@
 
 ## Attendees
 
-* Akos Hunyadi (Deutsche Telekom) xx
-* Babu Narayan (Nabstract)
-* Emil Zhang (Ericsson)
+* Akos Hunyadi (Deutsche Telekom)
 * Eric Murray (Vodafone)
-* Georgia Souitari (Vodafone)
-* Herbert Damker (Deutsche Telekom)
-* Ivan Nieto (Vodafone)
-* Jan Frimann (Ericsson)
-* Jignesh Sorathia (Spry Networks)
-* Joachim Dahlgreen (Ericsson) xxx
-* Jose Luis Urien Pinedo (Telefonica)
-* Mike Bowring (Spry Fox Networks)
+* Joachim Dahlgreen (Ericsson)
+* Mona Mokhber (Telefonica)
 * Rafal Artych (Deutsche Telekom)
-* Randy Levensalor (CableLabs)
-* Theohar (Hari) Konomi (TELUS)
-* Thorsten Lohmar (Ericsson)
-* Toshiyasu Wakayama (KDDI)
-* ...
+* Robert Ludivic (Orange)
+* Sachin Kumar (Vodafone)
 
-Mona Mokhber xxx
-Robert Ludovic xxxx
-Rafal xxx
-Eric Murray xxxx
-Sachin Vodafine xxx
-
-QoD minutes: [https://github.com/camaraproject/QualityOnDemand/tree/main/documentation/MeetingMinutes](https://github.com/camaraproject/QualityOnDemand/tree/main/documentation/MeetingMinutes)
+DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes](https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes)
 
 ## Agenda
 
 * Open issues 
 * Open PRs
-* Further new and open Issues
 * AOB
 
-sue
 
 ### Open issues:
 
 * [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34)
-- reformulate to one time request
-- start discussion 
-- 
+  - reformulate the issue to one time request
+  - start discussion 
 * [#24 Tag version 0.2.0](https://github.com/camaraproject/DeviceStatus/issues/24)
-0.2.0 release branch is created but it should be protected => this can be closed
-Additional release done
-Create 0.4.0  - release branch AHu
-0.5.0-wip
-
+  - 0.2.0 release branch is created but it should be protected => this issue can be closed
 * [#17 Subscription Mode with new Eventtypes](https://github.com/camaraproject/DeviceStatus/issues/17)
-- discuss with Noel
+  - related to the PR about subscriptions: https://github.com/camaraproject/WorkingGroups/pull/173 . This issue should be discussed or modified after those approval.
 * [#15 Update commonalities glossary with subproject relevant terms](https://github.com/camaraproject/DeviceStatus/issues/15)
-- update with Camelcase names - Rafal
+  - update with Camelcase names (Rafal)
 * [#14 Align error message with structure defined in the guideline](https://github.com/camaraproject/DeviceStatus/issues/14)
-Mona creates PR , target 0.5.0-wip
+  - Mona creates the PR, target 0.5.0-wip
 
 ### Open PRs
-*[#33 Update MAINTAINERS.MD](https://github.com/camaraproject/DeviceStatus/pull/33)
-- needs owner review
-*[#31 Adding notification/subscription for Device Status](https://github.com/camaraproject/DeviceStatus/pull/31)
--on hold
-
+* [#33 Update MAINTAINERS.MD](https://github.com/camaraproject/DeviceStatus/pull/33)
+  - needs owner review
+* [#31 Adding notification/subscription for Device Status](https://github.com/camaraproject/DeviceStatus/pull/31)
+  - on hold
 
 ## AOB
+* Create 0.4.0 release branch (Akos)
+* Further releases should be named as proposed in the Commonalities, e.g. 0.5.0-wip
 
-* Next call will be on ...
+* Next call will be on 12.04.2023 11:00 CET
