--- a/documentation/MeetingMinutes/MoM-2023-03-29.md
+++ b/documentation/MeetingMinutes/MoM-2023-03-29.md
@@ -24,14 +24,14 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 ### Open issues:
 
 * [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34)
-  - reformulate the issue to one time request
+  - rewrite the issue to one time request
   - start discussion 
 * [#24 Tag version 0.2.0](https://github.com/camaraproject/DeviceStatus/issues/24)
   - 0.2.0 release branch is created but it should be protected => this issue can be closed
 * [#17 Subscription Mode with new Eventtypes](https://github.com/camaraproject/DeviceStatus/issues/17)
-  - related to the PR about subscriptions: https://github.com/camaraproject/WorkingGroups/pull/173 . This issue should be discussed or modified after those approval.
+  - related to the PR about subscriptions: https://github.com/camaraproject/WorkingGroups/pull/173 . This issue should be discussed or modified after its approval.
 * [#15 Update commonalities glossary with subproject relevant terms](https://github.com/camaraproject/DeviceStatus/issues/15)
-  - update with Camelcase names (Rafal)
+  - update with camelcase names (Rafal)
 * [#14 Align error message with structure defined in the guideline](https://github.com/camaraproject/DeviceStatus/issues/14)
   - Mona creates the PR, target 0.5.0-wip
 
@@ -43,6 +43,6 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 ## AOB
 * Create 0.4.0 release branch (Akos)
-* Further releases should be named as proposed in the Commonalities, e.g. 0.5.0-wip
+* Further releases should be developed as proposed in Commonalities, using -wip in the version name during development of the next release
 
 * Next call will be on 12.04.2023 11:00 CET
