--- a/documentation/MeetingMinutes/MoM-2023-04-12.md
+++ b/documentation/MeetingMinutes/MoM-2023-04-12.md
@@ -23,6 +23,8 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 ### Open issues:
 
+* [#37 Create release 0.4.0]([https://github.com/camaraproject/DeviceStatus/issues/34](https://github.com/camaraproject/DeviceStatus/issues/37))
+
 * [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34)
   - rewrite the issue to one time request
   - start discussion 
@@ -30,19 +32,15 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
   - 0.2.0 release branch is created but it should be protected => this issue can be closed
 * [#17 Subscription Mode with new Eventtypes](https://github.com/camaraproject/DeviceStatus/issues/17)
   - related to the PR about subscriptions: https://github.com/camaraproject/WorkingGroups/pull/173 . This issue should be discussed or modified after its approval.
-* [#15 Update commonalities glossary with subproject relevant terms](https://github.com/camaraproject/DeviceStatus/issues/15)
-  - update with camelcase names (Rafal)
 * [#14 Align error message with structure defined in the guideline](https://github.com/camaraproject/DeviceStatus/issues/14)
   - Mona creates the PR, target 0.5.0-wip
 
 ### Open PRs
-* [#33 Update MAINTAINERS.MD](https://github.com/camaraproject/DeviceStatus/pull/33)
-  - needs owner review
+* [#35 Errors definition alignment with guidelines](https://github.com/camaraproject/DeviceStatus/pull/35)
 * [#31 Adding notification/subscription for Device Status](https://github.com/camaraproject/DeviceStatus/pull/31)
   - on hold
 
 ## AOB
-* Create 0.4.0 release branch (Akos)
 * Further releases should be developed as proposed in Commonalities, using -wip in the version name during development of the next release
 
-* Next call will be on 12.04.2023 11:00 CET
+* Next call will be on 26.04.2023 11:00 CET
