--- a/documentation/MeetingMinutes/MoM-2023-04-12.md
+++ b/documentation/MeetingMinutes/MoM-2023-04-12.md
@@ -6,11 +6,14 @@
 
 * Akos Hunyadi (Deutsche Telekom)
 * Eric Murray (Vodafone)
+* Gareth Williams (GSMA)
 * Joachim Dahlgreen (Ericsson)
+* Jorge Garcia Hospital (Telefonica)
+* Ludivic Robert (Orange)
 * Mona Mokhber (Telefonica)
+* Murat Karabulut (Deutsche Telekom)
 * Rafal Artych (Deutsche Telekom)
-* Robert Ludivic (Orange)
-* Sachin Kumar (Vodafone)
+* Sachin Kumar (Vodafone) 
 
 DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes](https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes)
 
@@ -23,24 +26,22 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 ### Open issues:
 
-* [#37 Create release 0.4.0]([https://github.com/camaraproject/DeviceStatus/issues/34](https://github.com/camaraproject/DeviceStatus/issues/37))
-
-* [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34)
-  - rewrite the issue to one time request
+* [#37 Create release 0.4.0](https://github.com/camaraproject/DeviceStatus/issues/37)
+  - Eric will create the release
+* [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34)  
   - start discussion 
 * [#24 Tag version 0.2.0](https://github.com/camaraproject/DeviceStatus/issues/24)
   - 0.2.0 release branch is created but it should be protected => this issue can be closed
+  - codeowners have no rights for branch protection (Akos will contact Herbert about it)
 * [#17 Subscription Mode with new Eventtypes](https://github.com/camaraproject/DeviceStatus/issues/17)
   - related to the PR about subscriptions: https://github.com/camaraproject/WorkingGroups/pull/173 . This issue should be discussed or modified after its approval.
 * [#14 Align error message with structure defined in the guideline](https://github.com/camaraproject/DeviceStatus/issues/14)
-  - Mona creates the PR, target 0.5.0-wip
 
 ### Open PRs
 * [#35 Errors definition alignment with guidelines](https://github.com/camaraproject/DeviceStatus/pull/35)
+  - additional approvals required
 * [#31 Adding notification/subscription for Device Status](https://github.com/camaraproject/DeviceStatus/pull/31)
   - on hold
 
 ## AOB
-* Further releases should be developed as proposed in Commonalities, using -wip in the version name during development of the next release
-
 * Next call will be on 26.04.2023 11:00 CET
