--- a/documentation/MeetingMinutes/MoM-2023-04-12.md
+++ b/documentation/MeetingMinutes/MoM-2023-04-12.md
@@ -9,7 +9,7 @@
 * Gareth Williams (GSMA)
 * Joachim Dahlgreen (Ericsson)
 * Jorge Garcia Hospital (Telefonica)
-* Ludivic Robert (Orange)
+* Ludovic Robert (Orange)
 * Mona Mokhber (Telefonica)
 * Murat Karabulut (Deutsche Telekom)
 * Rafal Artych (Deutsche Telekom)
