--- a/documentation/MeetingMinutes/MoM-2023-07-19.md
+++ b/documentation/MeetingMinutes/MoM-2023-07-19.md
@@ -8,8 +8,10 @@
 * Eric Murray (Vodafone)
 * Fernando Prado Cabrillo (Telefonica)
 * Joachim Dahlgreen (Ericsson)
-* Jorge Garcia Hospital (Telefonica)
 * Ludovic Robert (Orange)
+* Masaharu Hattori (KDDI)
+* Mona Mokhber (Telefonica)
+* Rafal Artych (Deutsche Telekom)
 
 
 DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes](https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes)
@@ -24,27 +26,29 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 ## Open issues:
 
-* [#57 Add documentation into API definition](https://github.com/camaraproject/DeviceStatus/issues/57)
+* [#57 Add documentation into API definition](https://github.com/camaraproject/DeviceStatus/issues/57)  
+ [PR65](https://github.com/camaraproject/DeviceStatus/pull/65) is open.
 
 * [#52 Harmonize device object with QoD API](https://github.com/camaraproject/DeviceStatus/issues/52)  
-Will be fixed in [PR31](https://github.com/camaraproject/DeviceStatus/pull/31)
+Has been fixed by [PR31](https://github.com/camaraproject/DeviceStatus/pull/31), the issue can be closed.
 
 * [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34)   
 No input from GSMA available. The PR can be created, based on the discussions.
 
 * [#17 Subscription Mode with new Eventtypes](https://github.com/camaraproject/DeviceStatus/issues/17)  
-[PR31](https://github.com/camaraproject/DeviceStatus/pull/31) is open
+[PR31](https://github.com/camaraproject/DeviceStatus/pull/31) is closed, the issue can be closed too.
   
 ## Open PRs
-* 
+* [#65 Add documentation](https://github.com/camaraproject/DeviceStatus/pull/65)  
+  The goal is to merge the PR by the end of CW29.
 
 ## API Roadmap
 ### Release 0.5.0
 * July-August 2023
-* [#57 Add documentation into API definition](https://github.com/camaraproject/DeviceStatus/issues/57)
-* [#52 Harmonize device object with QoD API](https://github.com/camaraproject/DeviceStatus/issues/52)
-* [#17 Subscription Mode with new Eventtypes](https://github.com/camaraproject/DeviceStatus/issues/17) /
-[PR#31](https://github.com/camaraproject/DeviceStatus/pull/31)
+* [#65 Add documentation](https://github.com/camaraproject/DeviceStatus/pull/65)
+* [~~#52 Harmonize device object with QoD API~~](https://github.com/camaraproject/DeviceStatus/issues/52)
+* [~~#31 Adding notification/subscription for Device Status~~](https://github.com/camaraproject/DeviceStatus/pull/31)
+* After [PR#65](https://github.com/camaraproject/DeviceStatus/pull/65) has been merged, the release can be created (Eric).
 
 ### Release 0.6.0
 * September-Oktober 2023
@@ -52,4 +56,9 @@ No input from GSMA available. The PR can be created, based on the discussions.
 
 ## AOB
 
-* Next call will be on 02.08.2023 11:00 CET
+* New issue: How to handle mandatory and optional features of each API  
+  *  Definition of minimum implementation of a Camara API  
+  * How can a provider inform the ASP/aggregator about not implemented features in advance of a call?  
+  * An issue in commonalities should be created  
+* Next call will be on 02.08.2023 11:00 CET 
+
