--- a/documentation/MeetingMinutes/MoM-2023-07-19.md
+++ b/documentation/MeetingMinutes/MoM-2023-07-19.md
@@ -57,8 +57,8 @@ No input from GSMA available. The PR can be created, based on the discussions.
 ## AOB
 
 * New issue: How to handle mandatory and optional features of each API  
-  *  Definition of minimum implementation of a Camara API  
-  * How can a provider inform the ASP/aggregator about not implemented features in advance of a call?  
+  * Definition of minimum implementation of a Camara API  
+  * How can a provider inform the ASP/aggregator about not implemented features in advance of the API call?  
   * An issue in commonalities should be created  
 * Next call will be on 02.08.2023 11:00 CET 
 
