--- a/documentation/MeetingMinutes/MoM-2023-09-13.md
+++ b/documentation/MeetingMinutes/MoM-2023-09-13.md
@@ -50,7 +50,7 @@ Currently with the roaming status types, but it can be extended, when e.g. conne
 ## API Roadmap
 
 ### Release 0.5.0
-* September-Oktober 2023
+* September-October 2023
 * The release is delayed because of the planned switch to CloudEvents.  
 * [~~#52 Harmonize device object with QoD API~~](https://github.com/camaraproject/DeviceStatus/issues/52)
 * [~~#31 Adding notification/subscription for Device Status~~](https://github.com/camaraproject/DeviceStatus/pull/31)
