--- a/documentation/MeetingMinutes/MoM-2023-09-27.md
+++ b/documentation/MeetingMinutes/MoM-2023-09-27.md
@@ -7,11 +7,12 @@
 * Akos Hunyadi (Deutsche Telekom)
 * Eric Murray (Vodafone)
 * Fernando Prado Cabrillo (Telefonica)
+* Jorge Garcia Hospital (Telefonica)
 * Joachim Dahlgreen (Ericsson)
 * Ludovic Robert (Orange)
-* Prashant Sidana (E&)
 * Rafal Artych (Deutsche Telekom)
 * Sachin Kumar (Vodafone)
+
 
 DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes](https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes)
 
@@ -25,15 +26,16 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 ## Open issues:
 * [#74 Align event-subscriptions with updated design guidelines based on CloudEvents](https://github.com/camaraproject/DeviceStatus/issues/74)  
+ [PR75](https://github.com/camaraproject/DeviceStatus/pull/75) is open.
 
 * [#71 Release plan&content](https://github.com/camaraproject/DeviceStatus/issues/71)  
-The upcoming releases were agreed as described below.  
+The upcoming releases were agreed as described below.  Can be closed.
   
 * [#70 Info required : API understanding](https://github.com/camaraproject/DeviceStatus/issues/70)  
 The issue can be closed.
 
 * [#57 Add documentation into API definition](https://github.com/camaraproject/DeviceStatus/issues/57)  
- [PR65](https://github.com/camaraproject/DeviceStatus/pull/65) is open.
+  [PR75](https://github.com/camaraproject/DeviceStatus/pull/75) is open.
 
 * [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34)   
 [PR69](https://github.com/camaraproject/DeviceStatus/pull/69) is open.
@@ -44,10 +46,10 @@ Currently with the roaming status types, but it can be extended, when e.g. conne
   
 ## Open PRs
 * [#69 add /connectivity - endpoint to check the network status of a device](https://github.com/camaraproject/DeviceStatus/pull/69)  
+Update the PR with connectivity-events based on CloudEvents. Depending on [PR75](https://github.com/camaraproject/DeviceStatus/pull/75).
   
-* [#65 Add documentation](https://github.com/camaraproject/DeviceStatus/pull/65)  
-  The PR should be adapted when CloudEvents will be introduced => status delayed.
-
+* [#75 Added Notification management aligned with CloudEvents format](https://github.com/camaraproject/DeviceStatus/pull/75)  
+  
 ## API Roadmap
 
 ### Release 0.5.0
@@ -55,12 +57,14 @@ Currently with the roaming status types, but it can be extended, when e.g. conne
 * The release is delayed because of the planned switch to CloudEvents.  
 * [~~#52 Harmonize device object with QoD API~~](https://github.com/camaraproject/DeviceStatus/issues/52)
 * [~~#31 Adding notification/subscription for Device Status~~](https://github.com/camaraproject/DeviceStatus/pull/31)
-* [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34)
-* [#65 Add documentation](https://github.com/camaraproject/DeviceStatus/pull/65)
-* [#74 Align event-subscriptions with updated design guidelines based on CloudEvents](https://github.com/camaraproject/DeviceStatus/issues/74) 
-
+* [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34) => [PR69](https://github.com/camaraproject/DeviceStatus/pull/69)
+* [#74 Align event-subscriptions with updated design guidelines based on CloudEvents](https://github.com/camaraproject/DeviceStatus/issues/74) => [PR75](https://github.com/camaraproject/DeviceStatus/pull/75)  
+* [#57 Add documentation into API definition](https://github.com/camaraproject/DeviceStatus/issues/57) => [PR75](https://github.com/camaraproject/DeviceStatus/pull/75)
+### Release 0.6.0
+* November-December 2023
+* OIDC 
 
 ## AOB
-
+* New issue to align with DG about security => Replace Client Credentials with OIDC (based on commonalities [PR57](https://github.com/camaraproject/Commonalities/pull/57))
 * Next call will be on 11.10.2023 11:00 CET
     
