--- a/documentation/MeetingMinutes/MoM-2023-09-27.md
+++ b/documentation/MeetingMinutes/MoM-2023-09-27.md
@@ -29,7 +29,7 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
  [PR75](https://github.com/camaraproject/DeviceStatus/pull/75) is open.
 
 * [#71 Release plan&content](https://github.com/camaraproject/DeviceStatus/issues/71)  
-The upcoming releases were agreed as described below.  Can be closed.
+The upcoming releases were agreed as described below.  This issue can be closed.
   
 * [#70 Info required : API understanding](https://github.com/camaraproject/DeviceStatus/issues/70)  
 The issue can be closed.
@@ -46,7 +46,7 @@ Currently with the roaming status types, but it can be extended, when e.g. conne
   
 ## Open PRs
 * [#69 add /connectivity - endpoint to check the network status of a device](https://github.com/camaraproject/DeviceStatus/pull/69)  
-Update the PR with connectivity-events based on CloudEvents. Depending on [PR75](https://github.com/camaraproject/DeviceStatus/pull/75).
+Update the PR with connectivity-events based on CloudEvents. Based on [PR75](https://github.com/camaraproject/DeviceStatus/pull/75).
   
 * [#75 Added Notification management aligned with CloudEvents format](https://github.com/camaraproject/DeviceStatus/pull/75)  
   
@@ -54,7 +54,7 @@ Update the PR with connectivity-events based on CloudEvents. Depending on [PR75]
 
 ### Release 0.5.0
 * September-October 2023
-* The release is delayed because of the planned switch to CloudEvents.  
+* The release is delayed because of switching to CloudEvents.  
 * [~~#52 Harmonize device object with QoD API~~](https://github.com/camaraproject/DeviceStatus/issues/52)
 * [~~#31 Adding notification/subscription for Device Status~~](https://github.com/camaraproject/DeviceStatus/pull/31)
 * [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34) => [PR69](https://github.com/camaraproject/DeviceStatus/pull/69)
