--- a/documentation/MeetingMinutes/MoM-2023-10-11.md
+++ b/documentation/MeetingMinutes/MoM-2023-10-11.md
@@ -2,14 +2,15 @@
 
 *October 11th, 2023*
 
-## Attendees TODO
+## Attendees
 
 * Akos Hunyadi (Deutsche Telekom)
 * Eric Murray (Vodafone)
 * Fernando Prado Cabrillo (Telefonica)
-* Jorge Garcia Hospital (Telefonica)
 * Joachim Dahlgreen (Ericsson)
 * Ludovic Robert (Orange)
+* Noel Wirzius (Deutsche Telekom)
+* Prashant Sidana (E&)
 * Rafal Artych (Deutsche Telekom)
 * Sachin Kumar (Vodafone)
 
@@ -46,9 +47,10 @@ Currently with the roaming status types, but it can be extended, when e.g. conne
 
 ## Open PRs
 * [#69 add /connectivity - endpoint to check the network status of a device](https://github.com/camaraproject/DeviceStatus/pull/69)  
-Update the PR with connectivity-events based on CloudEvents. Based on [PR75](https://github.com/camaraproject/DeviceStatus/pull/75).
+Update the PR with connectivity-events based on CloudEvents. Depending on [PR75](https://github.com/camaraproject/DeviceStatus/pull/75).
 
 * [#75 Added Notification management aligned with CloudEvents format](https://github.com/camaraproject/DeviceStatus/pull/75)  
+Reviews are requested.
 
 ## API Roadmap
 
