--- a/documentation/MeetingMinutes/MoM-2023-11-08.md
+++ b/documentation/MeetingMinutes/MoM-2023-11-08.md
@@ -3,14 +3,14 @@
 *November 8th, 2023*
 
 ## Attendees
-TBD
+
 * Akos Hunyadi (Deutsche Telekom)
 * Fernando Prado Cabrillo (Telefonica)
 * Joachim Dahlgreen (Ericsson)
 * Ludovic Robert (Orange)
-* Ming Hui Foo (Singtel) 
 * Rafal Artych (Deutsche Telekom)
 * Sachin Kumar (Vodafone)
+* Sebastian Köller (Vodafone)
 
 DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes](https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes)
 
@@ -23,41 +23,30 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 
 ## Open issues:
-* [#74 Align event-subscriptions with updated design guidelines based on CloudEvents](https://github.com/camaraproject/DeviceStatus/issues/74)  
- [PR75](https://github.com/camaraproject/DeviceStatus/pull/75) is open.
-
-* [#70 Info required : API understanding](https://github.com/camaraproject/DeviceStatus/issues/70)  
-The issue can be closed.
-
-* [#57 Add documentation into API definition](https://github.com/camaraproject/DeviceStatus/issues/57)  
-  [PR75](https://github.com/camaraproject/DeviceStatus/pull/75) is open.
 
 * [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34)   
 [PR69](https://github.com/camaraproject/DeviceStatus/pull/69) is open.
 
 * [#17 Subscription Mode with new Eventtypes](https://github.com/camaraproject/DeviceStatus/issues/17)  
-[PR31](https://github.com/camaraproject/DeviceStatus/pull/31) introduced a generic subscription endpoint. 
-Currently with the roaming status types, but it can be extended, when e.g. connectivity status info is added to the API.
+[PR31](https://github.com/camaraproject/DeviceStatus/pull/31) introduced a generic subscription endpoint.  
+[PR69](https://github.com/camaraproject/DeviceStatus/pull/69) extends the API with connectivity related events.  
 
 ## Open PRs
 * [#69 add /connectivity - endpoint to check the network status of a device](https://github.com/camaraproject/DeviceStatus/pull/69)  
-Update the PR with connectivity-events based on CloudEvents. Depending on [PR75](https://github.com/camaraproject/DeviceStatus/pull/75).
-
-* [#75 Added Notification management aligned with CloudEvents format](https://github.com/camaraproject/DeviceStatus/pull/75)  
-Reviews are requested.
+Update the PR with connectivity-events based on CloudEvents. Status: open for reviews.
 
 ## API Roadmap
 
 ### Release 0.5.0
-* September-October 2023 
+* November 2023 
 * [~~#52 Harmonize device object with QoD API~~](https://github.com/camaraproject/DeviceStatus/issues/52)
 * [~~#31 Adding notification/subscription for Device Status~~](https://github.com/camaraproject/DeviceStatus/pull/31)
 * [#34 New Endtype Connectivity](https://github.com/camaraproject/DeviceStatus/issues/34) => [PR69](https://github.com/camaraproject/DeviceStatus/pull/69)
-* [#74 Align event-subscriptions with updated design guidelines based on CloudEvents](https://github.com/camaraproject/DeviceStatus/issues/74) => [PR75](https://github.com/camaraproject/DeviceStatus/pull/75)  
-* [#57 Add documentation into API definition](https://github.com/camaraproject/DeviceStatus/issues/57) => [PR75](https://github.com/camaraproject/DeviceStatus/pull/75)
+* [~~#74 Align event-subscriptions with updated design guidelines based on CloudEvents~~](https://github.com/camaraproject/DeviceStatus/issues/74)   
+* [~~#57 Add documentation into API definition~~](https://github.com/camaraproject/DeviceStatus/issues/57) 
 * After merging all PRs the first Releasecandidate should be created
 ### Release 0.6.0
-* November-December 2023
+* Q1 2024
 * OIDC 
 
 ## AOB
