--- a/documentation/MeetingMinutes/MoM-2023-12-06.md
+++ b/documentation/MeetingMinutes/MoM-2023-12-06.md
@@ -3,9 +3,8 @@
 *December 6th, 2023*
 
 ## Attendees
-tbd
+
 * Akos Hunyadi (Deutsche Telekom)
-* Fernando Prado Cabrillo (Telefonica)
 * Ludovic Robert (Orange)
 * Ming Hui Foo (Singtel)
 * Rafal Artych (Deutsche Telekom)
@@ -17,22 +16,29 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 * Open issues 
 * Open PRs
+* Open Discussions
 * API Roadmap
 * AOB
 
 
 ## Open issues:
+* [#84 Minor corrections in Subscription model before release](https://github.com/camaraproject/DeviceStatus/issues/84)  
+  We agreed, that the issue can be implemented as proposed.
+
 * [#82 Create release candidate 0.5.0](https://github.com/camaraproject/DeviceStatus/issues/82)  
-  A PR should be created.
+PR is open.
 
 * [#81 enhance v0.4.1 to follow latest CAMARA guidelines](https://github.com/camaraproject/DeviceStatus/issues/81)   
 
 * [#17 Subscription Mode with new Eventtypes](https://github.com/camaraproject/DeviceStatus/issues/17)  
 Almost all requirements have been implemented (except support for multiple devices), the issue should be closed. 
 
-
 ## Open PRs
-* 
+* [#87 Create release candidate 0.5.0-rc](https://github.com/camaraproject/DeviceStatus/pull/87)  
+The PR is blocked by [#84 Minor corrections in Subscription model before release](https://github.com/camaraproject/DeviceStatus/issues/84)
+
+## Open discussions
+*
 
 ## API Roadmap
 
@@ -44,8 +50,9 @@ Almost all requirements have been implemented (except support for multiple devic
     * [~~#31 Adding notification/subscription for Device Status~~](https://github.com/camaraproject/DeviceStatus/pull/31)
     * [~~#34 New Endtype Connectivity~~](https://github.com/camaraproject/DeviceStatus/issues/34) => [PR69](https://github.com/camaraproject/DeviceStatus/pull/69)
     * [~~#74 Align event-subscriptions with updated design guidelines based on CloudEvents~~](https://github.com/camaraproject/DeviceStatus/issues/74)   
-    * [~~#57 Add documentation into API definition~~](https://github.com/camaraproject/DeviceStatus/issues/57) 
-    * [#82 Create release candidate 0.5.0](https://github.com/camaraproject/DeviceStatus/issues/82)
+    * [~~#57 Add documentation into API definition~~](https://github.com/camaraproject/DeviceStatus/issues/57)
+    * [#84 Minor corrections in Subscription model before release](https://github.com/camaraproject/DeviceStatus/issues/84)
+    * [#82 Create release candidate 0.5.0](https://github.com/camaraproject/DeviceStatus/issues/82) => [PR#87](https://github.com/camaraproject/DeviceStatus/pull/87)
 
 ## AOB
-* Next call will be on 06.12.2023 11:00 CET
+* Next call will be on 20.12.2023 11:00 CET -  However, when the 0.5.0-rc could be created earlier then this call should be skipped.
