--- a/documentation/MeetingMinutes/MoM-2024-01-17.md
+++ b/documentation/MeetingMinutes/MoM-2024-01-17.md
@@ -1,9 +1,9 @@
-# Camara DeviceStatus meeting - MOM-2023-12-06
+# Camara DeviceStatus meeting - MOM-2024-01-17
 
-*December 6th, 2023*
+*January 17th, 2024*
 
 ## Attendees
-
+tbd
 * Akos Hunyadi (Deutsche Telekom)
 * Ludovic Robert (Orange)
 * Ming Hui Foo (Singtel)
@@ -22,37 +22,39 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 
 ## Open issues:
-* [#84 Minor corrections in Subscription model before release](https://github.com/camaraproject/DeviceStatus/issues/84)  
-  We agreed, that the issue can be implemented as proposed.
-
-* [#82 Create release candidate 0.5.0](https://github.com/camaraproject/DeviceStatus/issues/82)  
-PR is open.
-
-* [#81 enhance v0.4.1 to follow latest CAMARA guidelines](https://github.com/camaraproject/DeviceStatus/issues/81)   
-
-* [#17 Subscription Mode with new Eventtypes](https://github.com/camaraproject/DeviceStatus/issues/17)  
-Almost all requirements have been implemented (except support for multiple devices), the issue should be closed. 
+* [#97 Update response codes to string, following other CAMARA APIs](https://github.com/camaraproject/DeviceStatus/issues/97)  
+  The corresponding PR is open: [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
+  
+* [#96 Path update per Design Guideline](https://github.com/camaraproject/DeviceStatus/issues/96)  
+  
+* [#94 Corrections needed to resolve linting errors](https://github.com/camaraproject/DeviceStatus/issues/94)  
+  The corresponding PR is open: [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
 
 ## Open PRs
-* [#87 Create release candidate 0.5.0-rc](https://github.com/camaraproject/DeviceStatus/pull/87)  
-The PR is blocked by [#84 Minor corrections in Subscription model before release](https://github.com/camaraproject/DeviceStatus/issues/84)
+* [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95)  
+  The PR is ready to be merged.
 
 ## Open discussions
-*
+* [#98 Roaming Status - AgeOfInformation (or last_updated_timestamp)](https://github.com/camaraproject/DeviceStatus/discussions/98)
+* [#89 Multi-Operator Demo Test Discussion](https://github.com/camaraproject/DeviceStatus/discussions/89)
+* [#72 CAMARA Compliant: Expose all end points](https://github.com/camaraproject/DeviceStatus/discussions/72)
+* [#48 Need support](https://github.com/camaraproject/DeviceStatus/discussions/48)
 
 ## API Roadmap
 
 ### Release 0.5.0
 * Planned release date: January 2024
-* Status: the planned release content has been merged, the first release candidate should be created.  
-* Release content:
+* Status: the release candidate 0.5.0-rc has been created  
+* Release content 0.5.0-rc:
     * [~~#52 Harmonize device object with QoD API~~](https://github.com/camaraproject/DeviceStatus/issues/52)
     * [~~#31 Adding notification/subscription for Device Status~~](https://github.com/camaraproject/DeviceStatus/pull/31)
     * [~~#34 New Endtype Connectivity~~](https://github.com/camaraproject/DeviceStatus/issues/34) => [PR69](https://github.com/camaraproject/DeviceStatus/pull/69)
     * [~~#74 Align event-subscriptions with updated design guidelines based on CloudEvents~~](https://github.com/camaraproject/DeviceStatus/issues/74)   
     * [~~#57 Add documentation into API definition~~](https://github.com/camaraproject/DeviceStatus/issues/57)
-    * [#84 Minor corrections in Subscription model before release](https://github.com/camaraproject/DeviceStatus/issues/84)
-    * [#82 Create release candidate 0.5.0](https://github.com/camaraproject/DeviceStatus/issues/82) => [PR#87](https://github.com/camaraproject/DeviceStatus/pull/87)
+    * [~~#84 Minor corrections in Subscription model before release~~](https://github.com/camaraproject/DeviceStatus/issues/84)
+    * [~~#82 Create release candidate 0.5.0~~](https://github.com/camaraproject/DeviceStatus/issues/82) => [PR#87](https://github.com/camaraproject/DeviceStatus/pull/87)
+* Release content 0.5.0-rc2:
+    * [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
 
 ## AOB
-* Next call will be on 20.12.2023 11:00 CET -  However, when the 0.5.0-rc could be created earlier then this call should be skipped.
+* Next call will be on 31.01.2024 11:00 CET
