--- a/documentation/MeetingMinutes/MoM-2024-01-17.md
+++ b/documentation/MeetingMinutes/MoM-2024-01-17.md
@@ -25,7 +25,8 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 * [#97 Update response codes to string, following other CAMARA APIs](https://github.com/camaraproject/DeviceStatus/issues/97)  
   The corresponding PR is open: [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
   
-* [#96 Path update per Design Guideline](https://github.com/camaraproject/DeviceStatus/issues/96)  
+* [#96 Path update per Design Guideline](https://github.com/camaraproject/DeviceStatus/issues/96)
+The issue should be implemented after releasing the 0.5.0.
   
 * [#94 Corrections needed to resolve linting errors](https://github.com/camaraproject/DeviceStatus/issues/94)  
   The corresponding PR is open: [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
@@ -35,7 +36,8 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
   The PR is ready to be merged.
 
 ## Open discussions
-* [#98 Roaming Status - AgeOfInformation (or last_updated_timestamp)](https://github.com/camaraproject/DeviceStatus/discussions/98)
+* [#98 Roaming Status - AgeOfInformation (or last_updated_timestamp)](https://github.com/camaraproject/DeviceStatus/discussions/98)  
+  It should be converted to an issue and continue the discussion there.
 * [#89 Multi-Operator Demo Test Discussion](https://github.com/camaraproject/DeviceStatus/discussions/89)
 * [#72 CAMARA Compliant: Expose all end points](https://github.com/camaraproject/DeviceStatus/discussions/72)
 * [#48 Need support](https://github.com/camaraproject/DeviceStatus/discussions/48)
@@ -53,8 +55,10 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
     * [~~#57 Add documentation into API definition~~](https://github.com/camaraproject/DeviceStatus/issues/57)
     * [~~#84 Minor corrections in Subscription model before release~~](https://github.com/camaraproject/DeviceStatus/issues/84)
     * [~~#82 Create release candidate 0.5.0~~](https://github.com/camaraproject/DeviceStatus/issues/82) => [PR#87](https://github.com/camaraproject/DeviceStatus/pull/87)
-* Release content 0.5.0-rc2:
-    * [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
+* Release content 0.5.0:
+    * [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95)
+    * New issue to prepare the release
 
 ## AOB
-* Next call will be on 31.01.2024 11:00 CET
+* Next call will be on 14.02.2024 11:00 CET
+* Since the API is already in mature status, a 1.0.0 should be targeted. => Create an issue to discuss about the process and the necessary to do's.
