--- a/documentation/MeetingMinutes/MoM-2024-01-17.md
+++ b/documentation/MeetingMinutes/MoM-2024-01-17.md
@@ -3,11 +3,13 @@
 *January 17th, 2024*
 
 ## Attendees
-tbd
+
+* Aishwarya Javkhedkar (Comviva)
 * Akos Hunyadi (Deutsche Telekom)
+* Fernando Prado Cabrillo (Telefonica)
+* Joachim Dahlgren (Ericsson) 
 * Ludovic Robert (Orange)
 * Ming Hui Foo (Singtel)
-* Rafal Artych (Deutsche Telekom)
 * Sachin Kumar (Vodafone)
 
 DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes](https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes)
@@ -25,7 +27,7 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 * [#97 Update response codes to string, following other CAMARA APIs](https://github.com/camaraproject/DeviceStatus/issues/97)  
   The corresponding PR is open: [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
   
-* [#96 Path update per Design Guideline](https://github.com/camaraproject/DeviceStatus/issues/96)
+* [#96 Path update per Design Guideline](https://github.com/camaraproject/DeviceStatus/issues/96)  
 The issue should be implemented after releasing the 0.5.0.
   
 * [#94 Corrections needed to resolve linting errors](https://github.com/camaraproject/DeviceStatus/issues/94)  
@@ -37,7 +39,7 @@ The issue should be implemented after releasing the 0.5.0.
 
 ## Open discussions
 * [#98 Roaming Status - AgeOfInformation (or last_updated_timestamp)](https://github.com/camaraproject/DeviceStatus/discussions/98)  
-  It should be converted to an issue and continue the discussion there.
+  It should be converted to an issue to continue the discussion there.
 * [#89 Multi-Operator Demo Test Discussion](https://github.com/camaraproject/DeviceStatus/discussions/89)
 * [#72 CAMARA Compliant: Expose all end points](https://github.com/camaraproject/DeviceStatus/discussions/72)
 * [#48 Need support](https://github.com/camaraproject/DeviceStatus/discussions/48)
@@ -46,7 +48,7 @@ The issue should be implemented after releasing the 0.5.0.
 
 ### Release 0.5.0
 * Planned release date: January 2024
-* Status: the release candidate 0.5.0-rc has been created  
+* Status: the release candidate 0.5.0-rc has been created. If no more bugs or findings in the 0.5.0-rc will be reported in the next 2 weeks, then the official release 0.5.0 can be created (no rc2 is necessary).
 * Release content 0.5.0-rc:
     * [~~#52 Harmonize device object with QoD API~~](https://github.com/camaraproject/DeviceStatus/issues/52)
     * [~~#31 Adding notification/subscription for Device Status~~](https://github.com/camaraproject/DeviceStatus/pull/31)
@@ -57,8 +59,9 @@ The issue should be implemented after releasing the 0.5.0.
     * [~~#82 Create release candidate 0.5.0~~](https://github.com/camaraproject/DeviceStatus/issues/82) => [PR#87](https://github.com/camaraproject/DeviceStatus/pull/87)
 * Release content 0.5.0:
     * [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95)
-    * New issue to prepare the release
+    * New issue&PR to prepare the release
 
 ## AOB
 * Next call will be on 14.02.2024 11:00 CET
-* Since the API is already in mature status, a 1.0.0 should be targeted. => Create an issue to discuss about the process and the necessary to do's.
+* Since the API is already in a mature status, a v1.0.0 should be targeted. => Create an issue to discuss about the process and the necessary to-do's.
+* An issue for creation of the necessary feature file for testing should be created too.
