--- a/documentation/MeetingMinutes/MoM-2024-02-14.md
+++ b/documentation/MeetingMinutes/MoM-2024-02-14.md
@@ -16,30 +16,45 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 ## Agenda
 
-* Open issues 
-* Open PRs
+* Open PRs 
+* Open Issues
 * Open Discussions
 * API Roadmap
 * AOB
 
 
+## Open PRs
+* [#111 Update device-status.yaml](https://github.com/camaraproject/DeviceStatus/pull/111)  
+  Renaming the POST endpoints.
+  
+* [#109 fix: add missing "subscriptionId" in "RoamingStatus"-data for CloudEvent](https://github.com/camaraproject/DeviceStatus/pull/109)
+
+* [#108 feat: use simple String for "type" in CloudEvent](https://github.com/camaraproject/DeviceStatus/pull/108)
+
 ## Open issues:
+
+* [#110 Request for Addition of "last_updated_timestamp" Field in CAMARA DeviceStatus API](https://github.com/camaraproject/DeviceStatus/issues/110) 
+
+* [#107 Use simple string for "type" in CloudEvent](https://github.com/camaraproject/DeviceStatus/issues/107)  
+  * The corresponding PR is open: [#108 feat: use simple String for "type" in CloudEvent](https://github.com/camaraproject/DeviceStatus/pull/108) 
+
+* [#104 Include x-correlator heade](https://github.com/camaraproject/DeviceStatus/issues/104)
+
+* [#102 Clarify API readiness status for v1.0.0](https://github.com/camaraproject/DeviceStatus/issues/102)
+  
 * [#97 Update response codes to string, following other CAMARA APIs](https://github.com/camaraproject/DeviceStatus/issues/97)  
-  The corresponding PR is open: [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
+  * The corresponding PR is open: [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
   
 * [#96 Path update per Design Guideline](https://github.com/camaraproject/DeviceStatus/issues/96)  
-The issue should be implemented after releasing the 0.5.0.
-  
-* [#94 Corrections needed to resolve linting errors](https://github.com/camaraproject/DeviceStatus/issues/94)  
-  The corresponding PR is open: [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
+  * The corresponding PR is open: [#111 Update device-status.yaml](https://github.com/camaraproject/DeviceStatus/pull/111) 
+ 
 
-## Open PRs
-* [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95)  
-  The PR is ready to be merged.
 
 ## Open discussions
+* [#105 v0.5.0 - Difference between "subscriptionExpireTime" & "expiresAt" in "SubscriptionInfo"](https://github.com/camaraproject/DeviceStatus/discussions/105)
+* [#100 Granularity of the Test Definition feature file](https://github.com/camaraproject/DeviceStatus/discussions/100)  
 * [#98 Roaming Status - AgeOfInformation (or last_updated_timestamp)](https://github.com/camaraproject/DeviceStatus/discussions/98)  
-  It should be converted to an issue to continue the discussion there.
+  * An the issue [#110 Request for Addition of "last_updated_timestamp" Field in CAMARA DeviceStatus API](https://github.com/camaraproject/DeviceStatus/issues/110) has been created, the discussion can be closed.  
 * [#89 Multi-Operator Demo Test Discussion](https://github.com/camaraproject/DeviceStatus/discussions/89)
 * [#72 CAMARA Compliant: Expose all end points](https://github.com/camaraproject/DeviceStatus/discussions/72)
 * [#48 Need support](https://github.com/camaraproject/DeviceStatus/discussions/48)
@@ -47,21 +62,14 @@ The issue should be implemented after releasing the 0.5.0.
 ## API Roadmap
 
 ### Release 0.5.0
-* Planned release date: January 2024
-* Status: the release candidate 0.5.0-rc has been created. If no more bugs or findings in the 0.5.0-rc will be reported in the next 2 weeks, then the official release 0.5.0 can be created (no rc2 is necessary).
-* Release content 0.5.0-rc:
-    * [~~#52 Harmonize device object with QoD API~~](https://github.com/camaraproject/DeviceStatus/issues/52)
-    * [~~#31 Adding notification/subscription for Device Status~~](https://github.com/camaraproject/DeviceStatus/pull/31)
-    * [~~#34 New Endtype Connectivity~~](https://github.com/camaraproject/DeviceStatus/issues/34) => [PR69](https://github.com/camaraproject/DeviceStatus/pull/69)
-    * [~~#74 Align event-subscriptions with updated design guidelines based on CloudEvents~~](https://github.com/camaraproject/DeviceStatus/issues/74)   
-    * [~~#57 Add documentation into API definition~~](https://github.com/camaraproject/DeviceStatus/issues/57)
-    * [~~#84 Minor corrections in Subscription model before release~~](https://github.com/camaraproject/DeviceStatus/issues/84)
-    * [~~#82 Create release candidate 0.5.0~~](https://github.com/camaraproject/DeviceStatus/issues/82) => [PR#87](https://github.com/camaraproject/DeviceStatus/pull/87)
-* Release content 0.5.0:
-    * [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95)
-    * New issue&PR to prepare the release
+* Status: release created on 31.01.2024
+
+### Release 0.6.0
+* Planned release date: tbd
+* Status: wip
+* Content:
+  
 
 ## AOB
-* Next call will be on 14.02.2024 11:00 CET
-* Since the API is already in a mature status, a v1.0.0 should be targeted. => Create an issue to discuss about the process and the necessary to-do's.
+* Next call will be on 28.02.2024 11:00 CET
 * An issue for creation of the necessary feature file for testing should be created too.
