--- a/documentation/MeetingMinutes/MoM-2024-02-28.md
+++ b/documentation/MeetingMinutes/MoM-2024-02-28.md
@@ -3,11 +3,10 @@
 *February 28th, 2024*
 
 ## Attendees
-tbd
+
 * Akos Hunyadi (Deutsche Telekom)
 * Fernando Prado Cabrillo (Telefonica)
-* Jorge Garcia Hospital (Telefonica)
-* Ludovic Robert (Orange)
+* Joachim Dahlgren (Ericsson)
 * Rafal Artych (Deutsche Telekom)
 * Sachin Kumar (Vodafone)
 
@@ -24,6 +23,7 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 ## Open PRs
 * [#112 include x-correlator and fix typo in 400 error code](https://github.com/camaraproject/DeviceStatus/pull/112)  
+  * No discussion
   * Reviews are missing.
 
 * [#111 Update device-status.yaml](https://github.com/camaraproject/DeviceStatus/pull/111)  
@@ -51,18 +51,14 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 * [#110 Request for Addition of "last_updated_timestamp" Field in CAMARA DeviceStatus API](https://github.com/camaraproject/DeviceStatus/issues/110)
   * The name should correlate with similar properties at other APIs
-  * Is the information on 3GPP available at all? 
 
 * [#107 Use simple string for "type" in CloudEvent](https://github.com/camaraproject/DeviceStatus/issues/107)  
   * The corresponding PR is open: [#108 feat: use simple String for "type" in CloudEvent](https://github.com/camaraproject/DeviceStatus/pull/108) 
 
 * [#104 Include x-correlator heade](https://github.com/camaraproject/DeviceStatus/issues/104)
-  *  No discussion, a PR should be created.
+ * The corresponding PR is open: [#112 include x-correlator and fix typo in 400 error code](https://github.com/camaraproject/DeviceStatus/pull/112) 
 
 * [#102 Clarify API readiness status for v1.0.0](https://github.com/camaraproject/DeviceStatus/issues/102)
-  
-* [#97 Update response codes to string, following other CAMARA APIs](https://github.com/camaraproject/DeviceStatus/issues/97)  
-  * The corresponding PR is open: [#95 Corrections resolving linting errors](https://github.com/camaraproject/DeviceStatus/pull/95) 
   
 * [#96 Path update per Design Guideline](https://github.com/camaraproject/DeviceStatus/issues/96)  
   * The corresponding PR is open: [#111 Update device-status.yaml](https://github.com/camaraproject/DeviceStatus/pull/111) 
@@ -71,10 +67,7 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 ## Open discussions
 * **[#114 Test Data : Device Status](https://github.com/camaraproject/DeviceStatus/discussions/114)**
-* [#105 v0.5.0 - Difference between "subscriptionExpireTime" & "expiresAt" in "SubscriptionInfo"](https://github.com/camaraproject/DeviceStatus/discussions/105)
-* [#100 Granularity of the Test Definition feature file](https://github.com/camaraproject/DeviceStatus/discussions/100)  
-* [#98 Roaming Status - AgeOfInformation (or last_updated_timestamp)](https://github.com/camaraproject/DeviceStatus/discussions/98)  
-  * An issue [#110 Request for Addition of "last_updated_timestamp" Field in CAMARA DeviceStatus API](https://github.com/camaraproject/DeviceStatus/issues/110) has been created, the discussion can be closed.  
+* [#100 Granularity of the Test Definition feature file](https://github.com/camaraproject/DeviceStatus/discussions/100) 
 * [#89 Multi-Operator Demo Test Discussion](https://github.com/camaraproject/DeviceStatus/discussions/89)
 * [#72 CAMARA Compliant: Expose all end points](https://github.com/camaraproject/DeviceStatus/discussions/72)
 * [#48 Need support](https://github.com/camaraproject/DeviceStatus/discussions/48)
@@ -87,9 +80,9 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 ### Release 0.6.0
 * Planned release date: tbd
 * Status: wip
-* Content:
+* Content: A proposal for the content should be created (Ákos)
   
 
 ## AOB
 * Next call will be on 13.03.2024 11:00 CET
-* An issue for creation of the necessary feature file for testing should be created too.
+* An issue for creation of the necessary feature file for testing should be created.
