Update and rename MoM-2023-03-13.md to MoM-2024-03-13.md

--- a/documentation/MeetingMinutes/MoM-2024-03-13.md
+++ b/documentation/MeetingMinutes/MoM-2024-03-13.md
@@ -22,6 +22,9 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 
 ## Open PRs
+
+* [#125 Separate endpoints into different APIs](https://github.com/camaraproject/DeviceStatus/pull/125)
+
 * [#123 Adding configuration for Github Actions with linting ruleset](https://github.com/camaraproject/DeviceStatus/pull/123)
     
 * [#121 feat: add termination reason when subscription deleted](https://github.com/camaraproject/DeviceStatus/pull/121)
