--- a/documentation/MeetingMinutes/MoM-2024-03-13.md
+++ b/documentation/MeetingMinutes/MoM-2024-03-13.md
@@ -24,6 +24,7 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 ## Open PRs
 
 * [#125 Separate endpoints into different APIs](https://github.com/camaraproject/DeviceStatus/pull/125)
+  * Split the current API into 4 different APIs
 
 * [#123 Adding configuration for Github Actions with linting ruleset](https://github.com/camaraproject/DeviceStatus/pull/123)
     
@@ -102,6 +103,7 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
     * [#111 Update device-status.yaml](https://github.com/camaraproject/DeviceStatus/pull/111)
     * [#112 include x-correlator and fix typo in 400 error code](https://github.com/camaraproject/DeviceStatus/pull/112)
     * [#123 Adding configuration for Github Actions with linting ruleset](https://github.com/camaraproject/DeviceStatus/pull/123)
+    * ?? [#125 Separate endpoints into different APIs](https://github.com/camaraproject/DeviceStatus/pull/125)
   
 
 ## AOB
