--- a/documentation/MeetingMinutes/MoM-2024-03-13.md
+++ b/documentation/MeetingMinutes/MoM-2024-03-13.md
@@ -3,12 +3,17 @@
 *March 13th, 2024*
 
 ## Attendees
-tbd
+
+* Aishwarya Javkhedkar (Comviva)
 * Akos Hunyadi (Deutsche Telekom)
 * Fernando Prado Cabrillo (Telefonica)
 * Joachim Dahlgren (Ericsson)
+* Ludovic Robert (Orange)
+* Maximilian Laue (Deutsche Telekom)
+* Quanain Meghjee (Vonage)
 * Rafal Artych (Deutsche Telekom)
 * Sachin Kumar (Vodafone)
+* Toyeeb Rehmann (GSMA)
 
 DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes](https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes)
 
@@ -23,35 +28,35 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 
 ## Open PRs
 
-* [#125 Separate endpoints into different APIs](https://github.com/camaraproject/DeviceStatus/pull/125)
-  * Split the current API into 4 different APIs
+* [#127 Updated in-line documentation for Roaming to clarify that country information can optionally be returned in the response](https://github.com/camaraproject/DeviceStatus/pull/127)
 
 * [#123 Adding configuration for Github Actions with linting ruleset](https://github.com/camaraproject/DeviceStatus/pull/123)
+  * No discussion
+  * Reviews are missing.
     
 * [#121 feat: add termination reason when subscription deleted](https://github.com/camaraproject/DeviceStatus/pull/121)
   * Should be first clarified in Commonalities: camaraproject/Commonalities#153    
-  
-* [#120 fix: change description that subscriptionExpireTime is optional](https://github.com/camaraproject/DeviceStatus/pull/120)
-    * Ready to be merged.
 
 * [#112 include x-correlator and fix typo in 400 error code](https://github.com/camaraproject/DeviceStatus/pull/112)  
   * No discussion
   * Reviews are missing.
+  * The fix for the typo should be covered in a separate PR.
 
 * [#111 Update device-status.yaml](https://github.com/camaraproject/DeviceStatus/pull/111)  
-  * Renaming the POST endpoints according to the design guidelines.
-  * No discussion, can be merged after approvals.
-  
-* [#109 fix: add missing "subscriptionId" in "RoamingStatus"-data for CloudEvent](https://github.com/camaraproject/DeviceStatus/pull/109)  
-  * No discussion, can be merged after approvals.
+  * The PR has been merged accidentally, but then the change has been reverted. This PR should be merged after the bugfix release v0.5.1 has been created.
+  * A new PR should be opened. 
 
 * [#108 feat: use simple String for "type" in CloudEvent](https://github.com/camaraproject/DeviceStatus/pull/108)
   * The enums for event-types include dots which causes problems at the code generation (Java) at DT.
   * Additional feedback from dev teams would be helpful to priotize the issue.
   * A possible change in the design guideline could be a solution.
   * The PR has been marked as draft until an agreed solution is ellaborated.
+  * An issue in Commonalities has been opened camaraproject/DeviceLocation#149
 
 ## Open issues:
+
+* [#125 Separate endpoints into different APIs](https://github.com/camaraproject/DeviceStatus/pull/125)
+  * Split the current API into 4 different APIs
 
 * [#124 When roaming status is true, is it mandatory to return both countryCode and countryName?](https://github.com/camaraproject/DeviceStatus/issues/124)
   
@@ -60,10 +65,7 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 * [#119 How can a provider inform the ASP/aggregator about not implemented features in advance of the API call](https://github.com/camaraproject/DeviceStatus/issues/119)
   
 * [#117 Send a CloudEvent when DELETE /subscriptions/{subscriptionId}](https://github.com/camaraproject/DeviceStatus/issues/117)
-  * Same issue exists in Device Location
-  * Should be addressed in Commonalities
-
-* [#116 subscriptionExpireTime is declared as "required" in the subscription-ends - note, but is optional currently](https://github.com/camaraproject/DeviceStatus/issues/116)
+  * The corresponding PR is open: [#121 feat: add termination reason when subscription deleted](https://github.com/camaraproject/DeviceStatus/pull/121)
 
 * [#115 /Connectivity API there is no indication for which particular subscriber event (DATA/SMS)](https://github.com/camaraproject/DeviceStatus/issues/115)  
 
@@ -79,7 +81,7 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 * [#102 Clarify API readiness status for v1.0.0](https://github.com/camaraproject/DeviceStatus/issues/102)
   
 * [#96 Path update per Design Guideline](https://github.com/camaraproject/DeviceStatus/issues/96)  
-  * The corresponding PR is open: [#111 Update device-status.yaml](https://github.com/camaraproject/DeviceStatus/pull/111) 
+  * A new PR should be created see [#111 Update device-status.yaml](https://github.com/camaraproject/DeviceStatus/pull/111)
  
 
 
@@ -93,14 +95,13 @@ DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/d
 ## API Roadmap
 
 ### Release 0.5.x
-* Status: release 0.5.0 was created on 31.01.2024
+* The release v0.5.0 was created on 31.01.2024
 * The bugfix release 0.5.1 is planned [#122 Bugfix release v0.5.1](https://github.com/camaraproject/DeviceStatus/issues/122)
 
 ### Release 0.6.0
 * Planned release date: tbd
-* Status: wip
 * Content:
-    * [#111 Update device-status.yaml](https://github.com/camaraproject/DeviceStatus/pull/111)
+    * [#96 Path update per Design Guideline](https://github.com/camaraproject/DeviceStatus/issues/96) 
     * [#112 include x-correlator and fix typo in 400 error code](https://github.com/camaraproject/DeviceStatus/pull/112)
     * [#123 Adding configuration for Github Actions with linting ruleset](https://github.com/camaraproject/DeviceStatus/pull/123)
     * ?? [#125 Separate endpoints into different APIs](https://github.com/camaraproject/DeviceStatus/pull/125)
