--- a/documentation/MeetingMinutes/MoM-2024-03-27.md
+++ b/documentation/MeetingMinutes/MoM-2024-03-27.md
@@ -3,17 +3,15 @@
 *March 27th, 2024*
 
 ## Attendees
-tbd
+
 * Aishwarya Javkhedkar (Comviva)
+* Ankita ()
 * Akos Hunyadi (Deutsche Telekom)
 * Fernando Prado Cabrillo (Telefonica)
 * Joachim Dahlgren (Ericsson)
-* Ludovic Robert (Orange)
-* Maximilian Laue (Deutsche Telekom)
 * Quanain Meghjee (Vonage)
-* Rafal Artych (Deutsche Telekom)
 * Sachin Kumar (Vodafone)
-* Toyeeb Rehmann (GSMA)
+
 
 DeviceStatus minutes: [https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes](https://github.com/camaraproject/DeviceStatus/tree/main/documentation/MeetingMinutes)
 
